# Chip-8-Interpreter

./: CMakeLists.txt  README.md
ext/: requirements.txt
src/: chip8.cpp  chip8.h  main.cpp
